--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/cottageDB
+spring.datasource.url=jdbc:mariadb://localhost:3306/CRM?serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=root
+
+server.servlet.encoding.force=true
+
+spring.jpa.hibernate.ddl-auto=create
